adding references to module searches"

--- a/index.html
+++ b/index.html
@@ -76,4 +76,7 @@
   <h2 id="router">router</h2>
   <p>HumanJS just uses Backbone's router so just <a href="http://backbonejs.org/#Router">see backbone's router docs for more info</a>.</p>
   <h2 id="moonboots">Moonboots</h2>
+  <h2 id="finding-modules">Finding modules</h2>
+  <p>There's a site containing a curated list of npm-installable modules with a quick filter box: <a href="http://projects.joreteg.com/humanjs-resources/">humanjs-resources</a> that should help you find things you may need. </p>
+  <p>Also, there are lots of modules you can find via <a href="http://browserify.org/search">browserify's module search</a>.</p>
 </main>
