--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <h4>Introduction</h4></a>
     <nav><a href="#goals">Goals</a> <a href="#starting">Starting a new app</a> <a href="#downloads">Downloads</a> <a href="#book">The book</a></nav><a href="#human-model"> 
       <h4>human-model</h4></a>
-    <nav><a href="#model-type">type</a> <a href="#model-initialize">initialize</a> <a href="#model-props">props</a> <a href="#model-session">session</a> <a href="#model-derived">derived</a></nav><a href="#human-view"> 
+    <nav><a href="#model-define">define</a> <a href="#model-type">type</a> <a href="#model-initialize">initialize</a> <a href="#model-props">props</a> <a href="#model-session">session</a> <a href="#model-derived">derived</a></nav><a href="#human-view"> 
       <h4>human-view</h4></a>
     <nav><a href="#view-initialize">initialize</a> <a href="#view-template">template</a> <a href="#view-render">render</a> <a href="#view-">renderAndBind</a> <a href="#view-render-collection">renderCollection</a></nav><a href="#router"> 
       <h4>router</h4></a><a href="#finding-modules">
@@ -61,11 +61,26 @@
   <h3 id="book">Get the book</h3>
   <p>Henrik has written a book the explains more of the approach and reasonoing behind humanjs. You can get it at <a href="http://humanjavascript.com">http://humanjavascript.com</a></p>
   <h2 id="human-model">human-model</h2>
-  <h3 id="model-type">type</h3>
-  <h3 id="model-initialize">initialize</h3>
-  <h3 id="model-props">props</h3>
-  <h3 id="model-session">session</h3>
-  <h3 id="model-derived">derived</h3>
+  <p>Human Model is a Backbone compatible alternative to Backbone Models. </p>
+  <p>While Backbone models work really well, they're not very readable in that looking at your model code you can't see what type of properties the model is storing. This becomes challenging when you're working in a team enviroment where other people want to see what's being stored. </p>
+  <p>In addition there is generally two types of state that we want to store on a model: 
+    <ul>
+      <li>State that comes from our API and represents the data persisted on the server.</li>
+      <li>State that represents current browser session state. </li>
+    </ul>
+  </p>
+  <p>Take for instance a <code>selected</code> property on a model. That's likely something you would use to represent current UI state for the current browser session but not something you'd want to save back to the API when calling a model's <code>save</code> method. So there really are two types of state. It's challenging to make that type of distinction with Backbone. </p>
+  <p>In human model you have to classify all your properties as either <code>prop</code> or a <code>session</code>. Other values you set will simply be ignored.</p>
+  <h3 id="model-define">define</h3>
+  <p>The define method returns a constructor that can be used to generate instances of your model. </p>
+  <p>It takes a single object that describes server properties (<code>props</code>), session properties (<code>session</code>), derived properties (<code>derived</code>) and any methods you'd like to attach to the model's prototype. These special property descriptions are exaplained individually below.</p>
+  <p class="sidenote">It's called <code>define</code> instead of <code>extend</code> because it's doing something fundamentally different than what Backbone does with <code>extend</code>. Backbone's <code>extend</code> is simply extending a Backbone Model's prototype directly. Whereas Human Model's <code>define</code> is describing a set of properties that will be used to generate a prototype with getters and setters that store the types of values you describe in your definition. However, you can still use it very similarly because any methods you pass as part of your definition are attached to the prototype.</p>
+  <p>`Backbone.Model.extend` vs. `HumanModel.define`.</p>
+  <h4 id="model-type">type</h4>
+  <h4 id="model-initialize">initialize</h4>
+  <h4 id="model-props">props</h4>
+  <h4 id="model-session">session</h4>
+  <h4 id="model-derived">derived</h4>
   <h2 id="human-view">human-view</h2>
   <h3 id="model-el">el</h3>
   <h3 id="model-initialize">initialize</h3>
