removing broken link

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <nav>these docs are still very incomplete and still being written. <a href="github.com/henrikjoreteg/humanjs">help make it better</a></nav>
       </div>
       <nav><a href="#introduction">introduction</a>
-        <nav><a href="#goals">goals</a> <a href="#starting">starting a new app</a> <a href="#downloads">downloads</a> <a href="#book">the book</a></nav><a href="#human-model">human-model</a>
+        <nav><a href="#goals">goals</a> <a href="#starting">starting a new app</a> <a href="#downloads">downloads</a></nav><a href="#human-model">human-model</a>
         <nav><a href="#model-define">define</a> <a href="#model-type">type</a> <a href="#model-initialize">initialize</a> <a href="#model-props">props</a> <a href="#model-session">session</a> <a href="#model-derived">derived</a></nav><a href="#human-view">human-view</a>
         <nav><a href="#view-initialize">initialize</a> <a href="#view-template">template</a> <a href="#view-render">render</a> <a href="#view-">renderAndBind</a> <a href="#view-render-collection">renderCollection</a></nav><a href="#router">router</a>
         <h2>external resources</h2>
