--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <nav><a href="#introduction">introduction</a>
         <nav><a href="#goals">goals</a> <a href="#starting">starting a new app</a> <a href="#downloads">downloads</a></nav><a href="#human-model">human-model</a>
         <nav><a href="#model-define">define</a> <a href="#model-type">type</a> <a href="#model-initialize">initialize</a> <a href="#model-props">props</a> <a href="#model-session">session</a> <a href="#model-derived">derived</a></nav><a href="#human-view">human-view</a>
-        <nav><a href="#view-initialize">initialize</a> <a href="#view-template">template</a> <a href="#view-render">render</a> <a href="#view-">renderAndBind</a> <a href="#view-render-collection">renderCollection</a></nav><a href="#router">router</a>
+        <nav><a href="#view-el">el</a> <a href="#view-initialize">initialize</a> <a href="#view-template">template</a> <a href="#view-render">render</a> <a href="#view-render-and-bind">renderAndBind</a> <a href="#view-render-collection">renderCollection</a> <a href="#view-bindings">bindings</a></nav><a href="#router">router</a>
         <h2>external resources</h2>
         <nav><a href="http://projects.joreteg.com/humanjs-resources/">curated modules</a><a href="http://humanjavscript.com">human javascript the book</a></nav>
       </nav>
@@ -86,12 +86,108 @@
       <h4 id="model-session">session</h4>
       <h4 id="model-derived">derived</h4>
       <h2 id="human-view">human-view</h2>
-      <h3 id="model-el">el</h3>
-      <h3 id="model-initialize">initialize</h3>
-      <h3 id="model-render">render</h3>
+      <h3 id="view-el">el</h3>
+      <h3 id="view-initialize">initialize</h3>
+      <h3 id="view-render">render</h3>
+      <h3 id="view-render-and-bind">renderAndBind</h3>
+      <p>This is a convenience method which will render the template and fully replace the root element with the rendered template content.</p>
+      <p>Either define a <code>template</code> property in your view, or pass in a template directly. The template can either be a function or a string. If the template is a function, it will be passed the <code>context</code> argument.</p>
       <h3 id="view-render-collection">renderCollection</h3>
-      <h3 id="model-renderAndBind">renderAndBind</h3>
-      <h3 id="model-renderCollection">renderCollection</h3>
+      <p>human-view includes a <code>renderCollection</code> method that works as follows:</p>
+      <pre>// some view for individual items in the collection
+var ItemView = StrictView.extend({ ... });
+
+// the main view
+var MainView = StrictView.extend({
+    template: '&lt;section class=&quot;page&quot;&gt;&lt;ul class=&quot;itemContainer&quot;&gt;&lt;/ul&gt;&lt;/section&gt;',
+    render: function (opts) {
+        // render our template as usual
+        this.renderAndBind();
+        
+        // call renderCollection with these arguments:
+        // 1. collection
+        // 2. which view to use for each item in the list
+        // 3. which element within this view to use as the container
+        // 4. options object (not required):
+        //      {
+        //          // function used to determine if model should be included
+        //          filter: function (model) {},
+        //          // boolean to specify reverse rendering order
+        //          reverse: false,
+        //          // view options object (just gets passed to item view's `initialize` method)
+        //          viewOptions: {}
+        //      }
+        this.renderCollection(this.collection, ItemView, this.$('.itemContainer')[0], opts);
+        return this;
+    }  
+})
+</pre>
+      <p>The <code>renderCollection()</code> call will maintain the collection within the <code>.itemContainer</code> element, including proper handling of add, remove, sort, reset, etc. You can optionally specify a filter function or choose to reverse the collection when rendering.</p>
+      <h3 id="view-renderCollection">renderCollection</h3>
+      <h3 id="view-bindings">bindings</h3>
+      <p>Bindings are view-level objects that map model properties to specific DOM selectors in the view's template. Once bindings are declared, human-view will automatically update the appropriate DOM elements or attributes when the bound model property changes.</p>
+      <h4 id="bindings-text">textBindings</h4>
+      <p>Text bindings are used to directly bind the inner text of an element to the model.</p>
+      <pre>textBindings: {
+    'liveStreamCount': '.live-stream-count'
+} 
+...
+&lt;div class='.live-stream-count'&gt;0&lt;/div&gt;
+</pre>
+      <p>Here, the contents of the <code>.liveStreamCount</code> element (or elements) within the view will be replaced with and bound to the value retrived by <code>model.get('liveStreamCount')</code>.</p>
+      <h4 id="bindings-src">srcBindings</h4>
+      <p>Source bindings are used to bind the <code>src</code> attribute of a DOM element to the model.</p>
+      <pre>srcBindings: {
+    'userProfilePic': 'img .profile-pic'
+}
+...
+&lt;img class='profile-pic' src='' alt='Profile Picture' /&gt;
+</pre>
+      <p>Here, the <code>src</code> tag of the <code>.profile-pic</code> image element will be bound to <code>model.get('userProfilePic')</code>.</p>
+      <h4 id="bindings-href">hrefBindings</h4>
+      <p>You're probably getting the idea by now, but href bindings are just like the src bindings, but for the <code>href</code> attribute.</p>
+      <pre>hrefBindings: {
+    'logoutURL': 'a .logout'
+}
+...
+&lt;a class='logout' href=''&gt;Logout&lt;/a&gt;
+</pre>
+      <p>Here, the <code>href</code> tag of the <code>.logout</code> anchor element will be bound to <code>model.get('logoutURL')</code>.</p>
+      <h4 id="bindings-class">classBindings</h4>
+      <p>Class bindings are a bit special. They maintain a class on the element according to the following rules:</p>
+      <ol>
+        <li><strong>If the bound property is a boolean</strong>: the name of the property will be used as the name of the class. The class will be present on the element when the boolean is <code>true</code>, and removed when the propety is <code>false</code>.
+          <pre>// within your view definition
+classBindings: {
+    'active': 'a .options-page'
+}
+...
+&lt;a class='options-page' href=''&gt;Options&lt;/a&gt;
+
+
+// some other code
+model.set('active', true); // element with have `active` class
+model.set('active', false); // `active` class will be removed (if present)
+
+</pre>
+        </li>
+      </ol>
+      <ol>
+        <li><strong>If the property is a string</strong>: the current value of the property will be used as the class name. When the property value changes the previous class will be removed and be replaced by the current value. No other classes on that element will be disturbed.
+          <pre>// within your view definition
+classBindings: {
+    'status': 'a .options-page'
+}
+...
+&lt;a class='options-page' href=''&gt;Options&lt;/a&gt;
+
+
+// some other code
+model.set('status', 'available'); // element with have an `available` class 
+model.set('status', 'away'); // `available` class will be removed and `away` class added.  
+</pre>
+        </li>
+      </ol>
       <h2 id="router">router</h2>
       <p>HumanJS just uses Backbone's router so just <a href="http://backbonejs.org/#Router">see backbone's router docs for more info</a>.</p>
       <h2 id="moonboots">Moonboots</h2>
