--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
       <div class="warning"><strong>WARNING: </strong>
         <nav>these docs are still very incomplete and still being written. <a href="github.com/henrikjoreteg/humanjs">help make it better</a></nav>
       </div>
-      <nav><a href="#introduction">introduction</a>
-        <nav><a href="#goals">goals</a> <a href="#starting">starting a new app</a> <a href="#downloads">downloads</a></nav><a href="#human-model">human-model</a>
-        <nav><a href="#model-define">define</a> <a href="#model-type">type</a> <a href="#model-initialize">initialize</a> <a href="#model-props">props</a> <a href="#model-session">session</a> <a href="#model-derived">derived</a></nav><a href="#human-view">human-view</a>
+      <nav><a href="#quick-start">quick-start</a><a href="#introduction">introduction</a>
+        <nav><a href="#goals">goals</a> <a href="#downloads">downloads</a></nav><a href="#human-model">human-model</a>
+        <nav><a href="#model-define">define</a>
+          <nav><a href="#model-props">props</a> <a href="#model-session">session</a> <a href="#model-derived">derived</a></nav><a href="#model-type">type</a> <a href="#model-initialize">initialize</a>
+        </nav><a href="#human-view">human-view</a>
         <nav><a href="#view-el">el</a> <a href="#view-initialize">initialize</a> <a href="#view-template">template</a> <a href="#view-render">render</a> <a href="#view-render-and-bind">renderAndBind</a> <a href="#view-render-collection">renderCollection</a> <a href="#view-bindings">bindings</a></nav><a href="#router">router</a>
         <h2>external resources</h2>
         <nav><a href="http://projects.joreteg.com/humanjs-resources/">curated modules</a><a href="http://humanjavscript.com">human javascript the book</a></nav>
@@ -19,12 +21,37 @@
     </aside>
     <main>
       <h1 class="humanjs">HumanJS</h1>
+      <h2 id="quick-start">Quick Start</h2>
+      <ol>
+        <li><a href="http://nodejs.org/">install node.js</a></li>
+        <li>install humanjs
+          <p><code>$ npm install humanjs -g</code></p>
+        </li>
+        <li>run scaffolding to build and run app
+          <p><code>$ humanjs</code></p>
+        </li>
+        <li>open your browser to: <code>http://localhost:3000</code></li>
+        <li>that's it!</li>
+      </ol>
+      <h4>What's included?</h4>
+      <ul>
+        <li>Well-architected shell of a single page app to serve as a starting point for your app.</li>
+        <li>A solution for using jade templates and templatizer to pre-compile client templates.</li>
+        <li>A fully functional development environment that will watch for changes. You just modify and refresh (without manual build steps).</li>
+        <li>Changing one flag in your config puts it in production mode which builds and serves minfied, uniquely named, and permanently cachable static files.</li>
+        <li>A clientside routing system using HTML5 pushState.</li>
+        <li>A main layout template is rendered by the main view that includes a page container where page views are rendered as the user navigates to different URLs in the app.</li>
+        <li>An example of rendering a collection of models in a container.</li>
+        <li>A mock REST API to demonstrate how you might talk to an API to fetch data.</li>
+        <li>A solution for declaritive binding of model properties to views, that is <em>completely</em> decoupled from the template engine. See human-view below for more details.</li>
+        <li>A solution for creating readable, type-checked, and very explicitly defined models. This is hugely important in team enviroments where you need somewhere to reference what is being stored on your models. See human-model for more detail.</li>
+      </ul>
       <h2 id="introduction">Introduction</h2>
       <p>There are lots of toolkits for building single page apps or "Native HTML5 Apps" if you will. It seems they're either too generic and unopinionated or too tightly coupled or require a lot of knowledge and understanding of the framework. After having built lots of single page apps with various tools at <a href="http://andyet.com">&yet</a> we've surmised that the ideal seems to lie somewhere in the middle. </p>
       <p>Ultimately we'd like something that is comprised of lots of independent little tools that each to one thing (see <a href="http://www.faqs.org/docs/artu/ch01s06.html">Unix philosophy</a>).</p>
       <p>That said, starting with a group of completely unassembled little pieces is inefficient because there are lots of patterns common to <em>most</em> apps. So we need an opinionated starting point.</p>
       <p>That's how HumanJS was born. Some of it simply uses <a href="http://backbonejs.org">Backbone.js</a> as is.</p>
-      <p>It's not really a framework, it's a bag of pre-assembled little tools. That you're free to rip apart and add to. </p>
+      <p>It's not really a framework, it's a bag of pre-assembled little tools that you're free to rip apart and add to. </p>
       <h3 id="goals">Goals</h3>
       <ul>
         <li>Readability</li>
@@ -43,30 +70,15 @@
         <li>Provide an opinionated starting point</li>
         <li>Use npm + browserify for package management but still play nicely with non-common JS libraries.</li>
       </ul>
-      <h2 id="starting">Starting a new app</h2>
-      <p>In order to provide a useful starting point, we've included an application generator to either serve as a starting point for your app, or at least provide a reference implementation for how these tools were meant to be used.</p>
-      <p>This installer can be pulled from npm:
-        <pre><code>$ npm install humanjs -g</code></pre>
-      </p>
-      <p>Then in your project directory, simply run:
-        <pre><code>$ humanjs</code></pre>
-      </p>
-      <p>This will walk you through a short series of questions to help you get your app set up. When complete it will tell you how to run the server and you'll have a working single page app running at: <code>http://localhost:3000</code></p>
-      <p>The demo project includes:
-        <ul>
-          <li>A solution for using jade templates and templatizer to pre-compile client templates.</li>
-          <li>A fully functional development environment where you can simply change a file in your server and re-fresh (without manual build steps).</li>
-          <li>Changing one flag in your config puts it in production mode which builds and serves minfied, uniquely named, and permanently cachable static files.</li>
-          <li>A clientside routing system using HTML5 pushState.</li>
-          <li>A main layout template is rendered by the main view that includes a page container where page views are rendered as the user navigates to different URLs in the app.</li>
-          <li>An example of rendering a collection of models in a container.</li>
-          <li>A mock REST API to demonstrate how you might talk to an API to fetch data.</li>
-          <li>A solution for declaritive binding of model properties to views, that is <em>completely</em> decoupled from the template engine. See human-view below for more details.</li>
-          <li>A solution for creating readable, type-checked, and very explicitly defined models. This is hugely important in team enviroments where you need somewhere to reference what is being stored on your models. See human-model for more detail.</li>
-        </ul>
-      </p>
-      <h2 id="human-model">human-model</h2>
-      <p>Models are responsible for storing all the state in our application. Very likely if you're looking at the DOM to determine the state of application that state information should be stored in a Model instead. If you're familiar with Backbone.js, Human Model is a Backbone compatible alternative to Models. </p>
+      <h3 id="downloads">downloads</h3>
+      <ol>
+        <li>humanjs (scaffolding / docs) <a href="https://github.com/henrikjoreteg/humanjs">github</a> <a href="https://npmjs.org/package/humanjs">npm</a></li>
+        <li>human-model <a href="https://github.com/henrikjoreteg/human-model">github</a> <a href="https://npmjs.org/package/human-model">npm</a></li>
+        <li>human-view <a href="https://github.com/henrikjoreteg/human-view">github</a> <a href="https://npmjs.org/package/human-view">npm</a></li>
+        <li>backbone.js <a href="https://github.com/jashkenas/backbone">github</a> <a href="https://npmjs.org/package/backbone">npm</a></li>
+      </ol>
+      <h2 id="human-model">human-model <small><a href="https://github.com/henrikjoreteg/human-model">github.com/henrikjoreteg/human-model</a></small></h2>
+      <p>Models are the core of app because they are responsible for storing all the application's state. Very likely if you're looking at the DOM to determine the state of application that state information that you should consider storing as a property on a model instead.</p>
       <p>Since models play such a central role in a single-page app they should really serve as documentation for how the app is structured. We want to be able to look at code for a Model and know exactly what type of data is stores. This is hugely important for enabling teams to work on the same app together.</p>
       <h4>Types of state</h4>
       <p>Take for instance a <code>selected</code> property on a model. That's likely something you would use to represent current UI state for the current browser session but not something you'd want to save back to the API when calling a model's <code>.save()</code> method. So there really are two types of state. It's challenging to make that type of distinction with Backbone. </p>
@@ -80,16 +92,19 @@
       <p>In human model you have to classify all your properties as either <code>prop</code> or a <code>session</code>. That includes declaring your <code>id</code> property. How HumanModel handles properties that you have not pre-defined is determined by its <code>extraProperties</code> setting. But, by default properties that are <code>.set()</code> on a model that you have not defined are simply ignored.</p>
       <h4>Handling model relationships</h4>
       <p>From our experience, <code>derived</code> properties work really well for handling relationships between models. Let's say you've got a model representing people and model representing a group of people. Often your API for fetching people would include something like a <code>groupID</code> as a property for each person you retrieve.</p>
-      <h3 id="model-define">define</h3>
+      <h4 id="model-backbone">comparing with Backbone.Model</h4>
+      <p>If you're familiar with Backbone.js, HumanModel is a Backbone-compatible alternative to Models. </p>
+      <p>The key differences are as follows:</p>
+      <ol> 
+        <li>There is no <code>extend</code> it's called <code>define</code> instead because it's doing something fundamentally different than what Backbone does with <code>extend</code>. Backbone's <code>extend</code> is simply extending a Backbone Model's prototype directly. Whereas Human Model's <code>define</code> is a way of describing a set of properties that will be used to generate a prototype with getters and setters that store the types of values you describe in your definition. However, you can still use it very similarly because any methods you pass as part of your definition are attached to the prototype.</li>
+        <li> </li>
+      </ol>
+      <h3 id="model-define">define <code>HumanModel.define()</code></h3>
       <p>The define method returns a constructor that can be used to generate instances of your model. </p>
-      <p>It takes a single object that describes server properties (<code>props</code>), session properties (<code>session</code>), derived properties (<code>derived</code>) and any methods you'd like to attach to the model's prototype. These special property descriptions are exaplained individually below.</p>
-      <p class="sidenote">It's called <code>define</code> instead of <code>extend</code> because it's doing something fundamentally different than what Backbone does with <code>extend</code>. Backbone's <code>extend</code> is simply extending a Backbone Model's prototype directly. Whereas Human Model's <code>define</code> is describing a set of properties that will be used to generate a prototype with getters and setters that store the types of values you describe in your definition. However, you can still use it very similarly because any methods you pass as part of your definition are attached to the prototype.</p>
-      <p>`Backbone.Model.extend` vs. `HumanModel.define`.</p>
-      <h4 id="model-type">type</h4>
-      <h4 id="model-initialize">initialize</h4>
-      <h4 id="model-props">props</h4>
-      <h4 id="model-session">session</h4>
-      <h4 id="model-derived">derived</h4>
+      <p>It takes a single object that describes model's properties (<code>props</code>), session properties (<code>session</code>), derived properties (<code>derived</code>) and any methods you'd like to attach to the model's prototype. These special property descriptions are exaplained individually below.</p>
+      <h4 id="model-props">props <code>props: {}</code></h4>
+      <h4 id="model-session">session <code>session: {}</code> </h4>
+      <h4 id="model-derived">derived <code>derived: {}</code> </h4>
       <p>The classic example of a derived property would be creating a <code>fullName</code> property that combined <code>firstName</code> and <code>lastName</code>.</p>
       <p>They are also ideal for handling relationships between other models you have on the client.</p>
       <p>Derived properties are defined as follows:</p>
@@ -116,7 +131,10 @@
       <h4><code>cache</code> (optional, boolean, default: false)</h4>
       <p>If <code>cache: true</code> the property will be computed and cached on first access. The cached value is cleared if any of the <code>deps</code> properties change and will only be recomputed next time it's accessed. </p>
       <p>If <code>cache: false</code> the property is recomputed each time it's accessed.</p>
-      <h2 id="human-view">human-view</h2>
+      <h4 id="model-type">type <code>model.type</code></h4>
+      <h4 id="model-initialize">initialize <code>model.initialize()</code></h4>
+      <p>This is a no-op by default. It is called as part of the model's constructor. If defined it will be passed the same arguments that were passed to the constructor.</p>
+      <h2 id="human-view">human-view <small><a href="https://github.com/henrikjoreteg/human-view">github.com/henrikjoreteg/human-view</a></small></h2>
       <h3 id="view-el">el</h3>
       <h3 id="view-initialize">initialize</h3>
       <h3 id="view-render">render</h3>
