--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
           <nav><a href="#model-props">props</a> <a href="#model-session">session</a> <a href="#model-derived">derived</a></nav><a href="#model-type">type</a> <a href="#model-initialize">initialize</a>
         </nav><a href="#human-view">human-view</a>
         <nav><a href="#view-el">el</a> <a href="#view-initialize">initialize</a> <a href="#view-template">template</a> <a href="#view-render">render</a> <a href="#view-render-and-bind">renderAndBind</a> <a href="#view-render-collection">renderCollection</a> <a href="#view-bindings">bindings</a></nav><a href="#router">router</a><a href="#examples">examples</a>
-        <nav><a href="#apps-andbang">And Bang</a> <a href="#apps-talky">Talky</a></nav>
+        <nav><a href="#andbang">And Bang</a> <a href="#talky">Talky</a> <a href="#resources">HumanJS resources app</a></nav>
         <h2>external resources</h2>
-        <nav><a href="http://projects.joreteg.com/humanjs-resources/">curated modules</a><a href="http://humanjavscript.com">human javascript the book</a></nav>
+        <nav><a href="http://resources.humanjavascript.com">curated modules</a><a href="http://humanjavscript.com">human javascript the book</a></nav>
       </nav>
     </aside>
     <main>
@@ -249,6 +249,15 @@ model.set('status', 'away'); // `available` class will be removed and `away` cla
       <h2 id="finding-modules">Finding modules</h2>
       <p>There's a site containing a curated list of npm-installable modules with a quick filter box: <a href="http://projects.joreteg.com/humanjs-resources/">humanjs-resources</a> that should help you find things you may need. </p>
       <p>Also, there are lots of modules you can find via <a href="http://browserify.org/search">browserify's module search</a>.</p>
+      <h2 id="examples">Examples</h2>
+      <h3 id="andbang">And Bang</h3>
+      <p>And Bang helps same-page-ify your team with shared tasks and chat. </p>
+      <p>Many of the tools and approaches of human javascript were extracted from And Bang.</p><a href="http://andbang.com"><img src="https://i.cloudup.com/p3kLPyMYDw-2000x2000.png" width="400" class="exampleImage"></a>
+      <h3 id="andbang">Talky</h3>
+      <p>Talky is truly simple video chat and screen sharing app for groups.</p>
+      <p>Powered by WebRTC and built on human javascript.</p><a href="https://talky.io"><img src="https://i.cloudup.com/0c5WD7hIUb-2000x2000.png" width="400" class="exampleImage"></a>
+      <h4 id="resources">The resources app</h4>
+      <p>Quick module search of curated modules. The source for this app is <a href="https://github.com/henrikjoreteg/humanjs-resources">available on github</a>.</p><a href="http://resources.humanjavascript.com"><img src="https://i.cloudup.com/XhYHvX7FA5-2000x2000.png" width="400" class="exampleImage"></a>
     </main>
     <script src="docs/js/highlight.pack.js"></script>
     <script>
