--- a/index.html
+++ b/index.html
@@ -6,21 +6,12 @@
     <title>humanjavascript docs</title>
   </head>
   <body>
-    <aside>
+    <nav>
       <div class="warning"><strong>WARNING: </strong>
-        <nav>these docs are still very incomplete and still being written. <a href="github.com/henrikjoreteg/humanjs">help make it better</a></nav>
+        <p>these docs are still very incomplete and still being written. <a href="github.com/henrikjoreteg/humanjs">help make it better</a></p>
       </div>
-      <nav><a href="#quick-start">quick-start</a><a href="#introduction">introduction</a>
-        <nav><a href="#goals">goals</a> <a href="#downloads">downloads</a></nav><a href="#human-model">human-model</a>
-        <nav><a href="#model-define">define</a>
-          <nav><a href="#model-props">props</a> <a href="#model-session">session</a> <a href="#model-derived">derived</a></nav><a href="#model-type">type</a> <a href="#model-initialize">initialize</a>
-        </nav><a href="#human-view">human-view</a>
-        <nav><a href="#view-el">el</a> <a href="#view-initialize">initialize</a> <a href="#view-template">template</a> <a href="#view-render">render</a> <a href="#view-render-and-bind">renderAndBind</a> <a href="#view-render-collection">renderCollection</a> <a href="#view-bindings">bindings</a></nav><a href="#router">router</a><a href="#examples">examples</a>
-        <nav><a href="#andbang">And Bang</a> <a href="#talky">Talky</a> <a href="#resources">HumanJS resources app</a></nav>
-        <h2>external resources</h2>
-        <nav><a href="http://resources.humanjavascript.com">curated modules</a><a href="http://humanjavscript.com">human javascript the book</a></nav>
-      </nav>
-    </aside>
+      <div id="slider"></div>
+    </nav>
     <main>
       <h1 class="humanjs">HumanJS</h1>
       <h2 id="quick-start">Quick Start</h2>
@@ -79,10 +70,10 @@
         <li>human-view <a href="https://github.com/henrikjoreteg/human-view">github</a> <a href="https://npmjs.org/package/human-view">npm</a></li>
         <li>backbone.js <a href="https://github.com/jashkenas/backbone">github</a> <a href="https://npmjs.org/package/backbone">npm</a></li>
       </ol>
-      <h2 id="human-model">human-model <small><a href="https://github.com/henrikjoreteg/human-model">github.com/henrikjoreteg/human-model</a></small></h2>
+      <h2 id="human-model" data-nav="human-model">human-model <small><a href="https://github.com/henrikjoreteg/human-model">github.com/henrikjoreteg/human-model</a></small></h2>
       <p>Models are the core of app because they are responsible for storing all the application's state. Very likely if you're looking at the DOM to determine the state of application that state information that you should consider storing as a property on a model instead.</p>
       <p>Since models play such a central role in a single-page app they should really serve as documentation for how the app is structured. We want to be able to look at code for a Model and know exactly what type of data is stores. This is hugely important for enabling teams to work on the same app together.</p>
-      <h4>Types of state</h4>
+      <h3 id="types-of-state">Types of state</h3>
       <p>Take for instance a <code>selected</code> property on a model. That's likely something you would use to represent current UI state for the current browser session but not something you'd want to save back to the API when calling a model's <code>.save()</code> method. So there really are two types of state. It's challenging to make that type of distinction with Backbone. </p>
       <p>HumanModel supports three types of state that will get stored on a model: 
         <ul>
@@ -92,21 +83,21 @@
         </ul>
       </p>
       <p>In human model you have to classify all your properties as either <code>prop</code> or a <code>session</code>. That includes declaring your <code>id</code> property. How HumanModel handles properties that you have not pre-defined is determined by its <code>extraProperties</code> setting. But, by default properties that are <code>.set()</code> on a model that you have not defined are simply ignored.</p>
-      <h4>Handling model relationships</h4>
+      <h3 id="model-relationships" data-nav="model relationships">Handling model relationships</h3>
       <p>From our experience, <code>derived</code> properties work really well for handling relationships between models. Let's say you've got a model representing people and model representing a group of people. Often your API for fetching people would include something like a <code>groupID</code> as a property for each person you retrieve.</p>
-      <h4 id="model-backbone">comparing with Backbone.Model</h4>
+      <h3 id="model-backbone" data-nav="comparing w/ backbone">comparing with Backbone.Model</h3>
       <p>If you're familiar with Backbone.js, HumanModel is a Backbone-compatible alternative to Models. </p>
       <p>The key differences are as follows:</p>
       <ol> 
         <li>There is no <code>extend</code> it's called <code>define</code> instead because it's doing something fundamentally different than what Backbone does with <code>extend</code>. Backbone's <code>extend</code> is simply extending a Backbone Model's prototype directly. Whereas Human Model's <code>define</code> is a way of describing a set of properties that will be used to generate a prototype with getters and setters that store the types of values you describe in your definition. However, you can still use it very similarly because any methods you pass as part of your definition are attached to the prototype.</li>
         <li> </li>
       </ol>
-      <h3 id="model-define">define <code>HumanModel.define()</code></h3>
+      <h3 id="model-define" data-nav="define">define <code>HumanModel.define()</code></h3>
       <p>The define method returns a constructor that can be used to generate instances of your model. </p>
       <p>It takes a single object that describes model's properties (<code>props</code>), session properties (<code>session</code>), derived properties (<code>derived</code>) and any methods you'd like to attach to the model's prototype. These special property descriptions are exaplained individually below.</p>
-      <h4 id="model-props">props <code>props: {}</code></h4>
-      <h4 id="model-session">session <code>session: {}</code> </h4>
-      <h4 id="model-derived">derived <code>derived: {}</code> </h4>
+      <h4 id="model-props" data-nav="props">props <code>props: {}</code></h4>
+      <h4 id="model-session" data-nav="session">session <code>session: {}</code> </h4>
+      <h4 id="model-derived" data-nav="derived">derived <code>derived: {}</code> </h4>
       <p>The classic example of a derived property would be creating a <code>fullName</code> property that combined <code>firstName</code> and <code>lastName</code>.</p>
       <p>They are also ideal for handling relationships between other models you have on the client.</p>
       <p>Derived properties are defined as follows:</p>
@@ -133,10 +124,10 @@
       <h4><code>cache</code> (optional, boolean, default: false)</h4>
       <p>If <code>cache: true</code> the property will be computed and cached on first access. The cached value is cleared if any of the <code>deps</code> properties change and will only be recomputed next time it's accessed. </p>
       <p>If <code>cache: false</code> the property is recomputed each time it's accessed.</p>
-      <h4 id="model-type">type <code>model.type</code></h4>
-      <h4 id="model-initialize">initialize <code>model.initialize()</code></h4>
+      <h4 id="model-type" data-nav="type">type <code>model.type</code></h4>
+      <h4 id="model-initialize" data-nav="initialize">initialize <code>model.initialize()</code></h4>
       <p>This is a no-op by default. It is called as part of the model's constructor. If defined it will be passed the same arguments that were passed to the constructor.</p>
-      <h2 id="human-view">human-view <small><a href="https://github.com/henrikjoreteg/human-view">github.com/henrikjoreteg/human-view</a></small></h2>
+      <h2 id="human-view" data-nav="human-view">human-view <small><a href="https://github.com/henrikjoreteg/human-view">github.com/henrikjoreteg/human-view</a></small></h2>
       <h3 id="view-el">el</h3>
       <h3 id="view-initialize">initialize</h3>
       <h3 id="view-render">render</h3>
@@ -253,18 +244,14 @@ model.set('status', 'away'); // `available` class will be removed and `away` cla
       <h3 id="andbang">And Bang</h3>
       <p>And Bang helps same-page-ify your team with shared tasks and chat. </p>
       <p>Many of the tools and approaches of human javascript were extracted from And Bang.</p><a href="http://andbang.com"><img src="https://i.cloudup.com/p3kLPyMYDw-2000x2000.png" width="400" class="exampleImage"></a>
-      <h3 id="andbang">Talky</h3>
+      <h3 id="talky">Talky</h3>
       <p>Talky is truly simple video chat and screen sharing app for groups.</p>
       <p>Powered by WebRTC and built on human javascript.</p><a href="https://talky.io"><img src="https://i.cloudup.com/0c5WD7hIUb-2000x2000.png" width="400" class="exampleImage"></a>
       <h4 id="resources">The resources app</h4>
       <p>Quick module search of curated modules. The source for this app is <a href="https://github.com/henrikjoreteg/humanjs-resources">available on github</a>.</p><a href="http://resources.humanjavascript.com"><img src="https://i.cloudup.com/XhYHvX7FA5-2000x2000.png" width="400" class="exampleImage"></a>
     </main>
-    <script src="docs/js/highlight.pack.js"></script>
-    <script>
-      Array.prototype.forEach.call(document.querySelectorAll('pre'), function (node) {
-        hljs.highlightBlock(node);
-      });
-    </script>
-    <script src="http://static.andyet.com/tag.js"></script>
   </body>
+  <script src="docs/js/highlight.pack.js"></script>
+  <script src="docs/js/setup.js"></script>
+  <script src="http://static.andyet.com/tag.js"></script>
 </html>
