adding contributors, more model content

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <nav>
       <div class="warning"><strong>WARNING: </strong>
-        <p>these docs are still very incomplete and still being written. <a href="http://github.com/henrikjoreteg/humanjs">help make it better</a></p>
+        <p>these docs are incomplete and still being written. <a href="http://github.com/henrikjoreteg/humanjs">help make them better</a></p>
       </div>
       <div id="slider"> </div>
     </nav>
@@ -103,13 +103,50 @@
         <li>There is no <code>extend</code> it's called <code>define</code> instead because it's doing something fundamentally different than what Backbone does with <code>extend</code>. Backbone's <code>extend</code> is simply extending a Backbone Model's prototype directly. Whereas Human Model's <code>define</code> is a way of describing a set of properties that will be used to generate a prototype with getters and setters that store the types of values you describe in your definition. However, you can still use it very similarly because any methods you pass as part of your definition are attached to the prototype.</li>
       </ol>
       <h3 data-nav="define">define <code>HumanModel.define()</code></h3>
-      <p>The define method returns a constructor that can be used to generate instances of your model. </p>
+      <p>The <code>define</code> method returns a constructor that can be used to generate instances of your model. </p>
       <p>It takes a single object that describes model's properties (<code>props</code>), session properties (<code>session</code>), derived properties (<code>derived</code>) and any methods you'd like to attach to the model's prototype. These special property descriptions are exaplained individually below.</p>
       <h4 data-nav="props">props <code>props: {}</code></h4>
+      <p>Schema definitions take an attribute called <code>props</code> to define properties.</p>
+      <p>These property definitions can be described three different ways depending on your needs:</p>
+      <p>Just a string that identifies the type:</p>
+      <pre>props: {
+  firstName: 'string'
+}
+</pre>
+      <p>An array of positional descriptors:</p>
+      <pre>// these follow the format [type (string), required (boolean), default value];
+props: {
+  firstName: ['string', true, 'user']
+}
+</pre>
+      <p>You can also just supply an object if you want to be more explicit:</p>
+      <pre>props: {
+  firstName: {
+    type: 'string',
+    required: true,
+    default: 'user'
+  }
+}
+</pre>
+      <p>You can mix and match these as you wish. For example all the following are valid:</p>
+      <pre>props: {
+  active: 'boolean',
+  firstName: ['string', false, 'joe'],
+  lastName: {
+    type: 'string',
+    default: 'user',
+    requred: true
+  },
+  isAwesome: ['boolean', true] // you don't have to provide a default
+}
+</pre>
+      <p>types can be: <code>string</code>, <code>number</code>, <code>boolean</code>, <code>array</code>, <code>object</code>, or <code>date</code></p>
       <h4 data-nav="session">session <code>session: {}</code> </h4>
+      <p>Session properties are defined the <em>exact</em> same way as <code>props</code>. However, they won't be included in any server calls such as calling <code>save()</code>.</p>
       <h4 data-nav="derived">derived <code>derived: {}</code> </h4>
-      <p>The classic example of a derived property would be creating a <code>fullName</code> property that combined <code>firstName</code> and <code>lastName</code>.</p>
-      <p>They are also ideal for handling relationships between other models you have on the client.</p>
+      <p>The classic example of a derived property would be creating a <code>fullName</code> property that combined <code>firstName</code> and <code>lastName</code>. Why would we want this? Well, it means we can listen for a <code>change:fullName</code> event, or bind <code>fullName</code> to something in our HTML as if it were a normal property.</p>
+      <p>The other big benefit of derived properties is that we can (optionally) specify which properties they depend on or choose to cache the results. This is useful for optimizing performance of things that may be more computationally intensive and only re-calculating those values if any of the properties it depends on change.</p>
+      <p>In addition, the are also ideal for handling relationships between other models you have on the client. Your server API may return an <code>id</code> of a related model as part of the results. For example let's assume we've got a user model that includes a <code>groupId</code> property from our API and a Groups collection that contains Group models in our app. We can create a derived property on our user model called <code>group</code> that looks up and returns the correct group from our global model registry.</p>
       <p>Derived properties are defined as follows:</p>
       <pre>var Person = HumanModel.define({
   props: {
@@ -127,14 +164,25 @@
   }
 });
 </pre>
-      <h4><code>fn</code> (required, function)</h4>
+      <h5><code>fn</code> (required, function)</h5>
       <p>This is the actual function that will called when you access the derived property. Within this function <code>this</code> is the current model instance.</p>
-      <h4><code>deps</code> (optional, array)</h4>
+      <h5><code>deps</code> (optional, array)</h5>
       <p>Properties that our derived property is dependent on. When these change we also get a <code>change:fullName</code> event. If no <code>deps</code> are specified you will never get a change event for the derived property.</p>
-      <h4><code>cache</code> (optional, boolean, default: false)</h4>
+      <h5><code>cache</code> (optional, boolean, default: false)</h5>
       <p>If <code>cache: true</code> the property will be computed and cached on first access. The cached value is cleared if any of the <code>deps</code> properties change and will only be recomputed next time it's accessed. </p>
       <p>If <code>cache: false</code> the property is recomputed each time it's accessed.</p>
       <h4 data-nav="type">type <code>model.type</code></h4>
+      <p>Giving a model a string <code>type</code> property makes it easy to find models of that type in the global registry and provides an easy way for you to identify the type of model you're dealing with in code. This is not required, but recommended.</p>
+      <p>For example:</p>
+      <pre>var HumanModel = require('human-model');
+
+module.exports = HumanModel.define({
+  type: 'widget',
+  props: {
+    name: 'string'
+  }
+});
+</pre>
       <h4 data-nav="initialize">initialize <code>model.initialize()</code></h4>
       <p>This is a no-op by default. It is called as part of the model's constructor. If defined it will be passed the same arguments that were passed to the constructor.</p>
       <h2 data-nav="human-view">human-view <small><a href="https://github.com/henrikjoreteg/human-view">github.com/henrikjoreteg/human-view</a></small></h2>
@@ -293,6 +341,21 @@ app.listen(3000);
       <p>Powered by WebRTC and built on human javascript.</p><a href="https://talky.io"><img src="https://i.cloudup.com/0c5WD7hIUb-2000x2000.png" width="400" class="exampleImage"></a>
       <h3>The resources app</h3>
       <p>Quick module search of curated modules. The source for this app is <a href="https://github.com/henrikjoreteg/humanjs-resources">available on github</a>.</p><a href="http://resources.humanjavascript.com"><img src="https://i.cloudup.com/XhYHvX7FA5-2000x2000.png" width="400" class="exampleImage"></a>
+      <h3>Otalk</h3>
+      <p>Otalk is an open source chat client powered XMPP, stanza.io, and WebRTC. You can think of it as an open source alternative to Skype.</p><a href="https://otalk.im"><img src="https://i.cloudup.com/u0xhQors8G-2000x2000.png" width="400" class="exampleImage"></a>
+      <h2>Contributors</h2>
+      <p>Human JavaScript is the combined efforts of lots of people and since all these projects are open source there are simply too many contributors to list. </p>
+      <p>The project is sponsored by <a href="http://andyet.com">&yet</a>.</p>
+      <p>The core contributor team consists of:</p>
+      <ul>
+        <li> <a href="http://twitter.com/henrikjoreteg">Henrik Joreteg</a></li>
+        <li> <a href="http://twitter.com/lukekarrys">Luke Karrys</a></li>
+        <li> <a href="http://twitter.com/lancestout">Lance Stout</a></li>
+        <li> <a href="http://twitter.com/philip_roberts">Philip Roberts</a></li>
+        <li> <a href="http://twitter.com/_crossdiver">Isaac Lewis</a></li>
+        <li> <a href="http://twitter.com/wraithgar">Michael (Gar) Garvin</a></li>
+      </ul>
+      <p>If you have benefitted from these tools, please consider <a href="http://humanjavascript.com">buying the book</a> or <a href="http://andyet.com">hiring &yet</a> to help with your next development project.</p>
     </main>
   </body>
   <script src="docs/js/highlight.pack.js"></script>
