clarification on what running humanjs does

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <li>install humanjs
           <p><code>$ npm install humanjs -g</code></p>
         </li>
-        <li>run scaffolding to build and run app
+        <li>run ``humanjs`` to create your new app folder, build your project scaffolding, and run your app.
           <p><code>$ humanjs</code></p>
         </li>
         <li>open your browser to: <code>http://localhost:3000</code></li>
